deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-version
  labels:
    app: go-app-version
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-app-version
  template:
    metadata:
      labels:
        app: go-app-version
    spec:
      containers:
      - name: go-app-version
        image: quay.io/alekssaul/go-app-version:v0.1
        ports:
        - containerPort: 8080
        CMD:
